# Compilers-P3-GJ

./: .gitignore  CMakeLists.txt  README.md
data/: input_lang2_valid.cscn  input_test.cscn  input_test_P3.txt  input_test_p3dbg.txt  input_valid_only.cscn  language.txt  language2.txt  test_input.txt  test_valid_input_p3dbg.txt  test_valid_input_p3dgb.txt  test_valid_inputs_p3dbg.txt  tokens_file_p3dbg.txt
src/: CMakeLists.txt  main.c  main.h  types.h  utils_files.c  utils_files.h
src/Automata_Module/: CMakeLists.txt  automata.c  automata.h
src/InArgs_Module/: CMakeLists.txt  inArgs.c  inArgs.h
src/Language_Module/: CMakeLists.txt  language.c  language.h
src/Parser_Module/: CMakeLists.txt  parser.c  parser.h
src/Stack_Module/: CMakeLists.txt  stack.c  stack.h
src/TokenReader_Module/: CMakeLists.txt  tokenReader.c  tokenReader.h
src/data/: automatas.txt  test_input.txtdbgcnt  test_input.txtscn
tests/: CMakeLists.txt  test_parser_integration.c
